FEAT : Enhancement auth service
